{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerController",
            "id": "9f118514-4de5-43db-9bcf-cb15802a668e",
            "actions": [
                {
                    "name": "Attack1",
                    "type": "Value",
                    "id": "99564348-f6dc-49d5-8f67-871107f133b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack2",
                    "type": "Button",
                    "id": "ca0d938e-3f99-4968-af6b-66d07228ce56",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack3",
                    "type": "Button",
                    "id": "afd7a426-73da-4bfa-9e8a-97426d7189a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack4",
                    "type": "Button",
                    "id": "a7993157-ba52-4a31-b82f-33c3634df6b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack5",
                    "type": "Button",
                    "id": "bb4e3a3a-9ad9-41e4-8028-bc39e4f52ada",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack6",
                    "type": "Button",
                    "id": "ebe15944-293b-4ad6-a3c0-a9a011f7881e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack7",
                    "type": "Button",
                    "id": "b556fb3b-ee58-4cad-bcfe-5d6a69a61628",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack8",
                    "type": "Button",
                    "id": "3c2c565e-785e-4627-ae52-a92e4a0af845",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b4845e5e-5751-4f3f-92e3-b80aa38cfdd7",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d0f332e-123a-400d-bae6-b596f99cb45f",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67326119-488a-4ca7-a2f1-8170da13ee40",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ca99f7f-48eb-4466-833c-4793f038e395",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d617815-3ad4-4e6f-857c-e4018f30fca1",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ba80698-b545-47c6-9339-1c4f19eadb2f",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be9c5343-7c20-40c2-a97d-71165800ca0a",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7b39e2f-3392-49c9-acd5-39ea35fc30ff",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack8",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}